Refactor strings.xml

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="entity.menus.goldchest.item1">Забрать золото(золотой запас +#{?})</string>
-    <string name="entity.menus.goldchest.item2">Раздать воинам(авторитет +#{?})</string>
-    <string name="menus.country.item1">Равнолесье</string>
-    <string name="menus.country.item2">Заболотие</string>
-    <string name="menus.country.item3">Тайгания</string>
-    <string name="menus.country.item4">Альпия</string>
-    <string name="menus.country.item5">Сахария</string>
+    <string name="entity.goldchest.menu.item1">Забрать золото(золотой запас +#{?})</string>
+    <string name="entity.goldchest.menu.item2">Раздать воинам(авторитет +#{?})</string>
+    <string name="entity.goldChest.messages.salary">Недельная плата+</string>
+    <string name="entity.goldChest.messages.magickUp">Макс кол-во волшебств +1</string>
     <string name="countries.country1">Равнолесье</string>
+    <string name="countries.country2">Заболотие</string>
+    <string name="countries.country3">Тайгания</string>
+    <string name="countries.country4">Альпия</string>
+    <string name="countries.country5">Сахария</string>
     <string name="entity.mapNext.message">Вы нашли карту до новой страны</string>
-    <string name="entity.menus.city.item1">Заключить контракт</string>
-    <string name="entity.menus.city.item7">Товар</string>
-    <string name="entity.menus.city.item6">Работники</string>
-    <string name="entity.menus.city.item5">Купить стенобитное орудие</string>
-    <string name="entity.menus.city.item4">%волшебство%</string>
-    <string name="entity.menus.city.item3">Спросить о замке</string>
-    <string name="entity.menus.city.item2">Купить корабль</string>
-    <string name="entity.menus.city.item2a">Продать корабль</string>
-    <string name="entity.menus.city.workers.item1">Плотники</string>
-    <string name="entity.menus.city.workers.item2">Лесорубы</string>
-    <string name="entity.menus.city.workers.item3">Землекопы</string>
-    <string name="entity.menus.city.workers.item4">Камнетёсы</string>
+    <string name="entity.city.menu.item1">Заключить контракт</string>
+    <string name="entity.city.menu.item7">Товар</string>
+    <string name="entity.city.menu.item6">Работники</string>
+    <string name="entity.city.menu.item5">Купить стенобитное орудие</string>
+    <string name="entity.city.menu.item4">%волшебство%</string>
+    <string name="entity.city.menu.item3">Спросить о замке</string>
+    <string name="entity.city.menu.item2">Купить корабль</string>
+    <string name="entity.city.menu.item2a">Продать корабль</string>
+    <string name="entity.city.menu.workers.item1">Плотники</string>
+    <string name="entity.city.menu.workers.item2">Лесорубы</string>
+    <string name="entity.city.menu.workers.item3">Землекопы</string>
+    <string name="entity.city.menu.workers.item4">Камнетёсы</string>
     <string name="entity.harmfulMap.message1">Вы теряете работников</string>
     <string name="entity.harmfulMap.message2">Ваш корабль пошёл ко дну</string>
     <string name="entity.harmfulMap.message3">Ваша памяти стала вам изменять</string>
@@ -34,7 +35,6 @@
     <string name="entity.goodMap.message4">*Контрактные замки данной земли расположены</string>
     <string name="entity.goodMap.message5">*Ваш золотой запас растёт</string>
     <string name="entity.goodMap.message6">*Ваши войно становятся более умелыми</string>
-    <string name="entity.goodMap.message7">Ценная бумага, нужна одному из хозяев земель</string>
     <string name="entity.guidePost.message1">Найди ритуальный камень.</string>
     <string name="entity.guidePost.message2">Ку-ку.</string>
     <string name="entity.guidePost.message3">Присядь, Рыцарь, Отдохни.</string>
@@ -57,8 +57,6 @@
     <string name="entity.magician.menu.item6c">Обновить работников</string>
     <string name="entity.magician.menu.item6d">Заселить воинов</string>
     <string name="entity.magician.menu.item6e">Усилить воинов</string>
-    <string name="entity.goldChest.messages.salary">Недельная плата+</string>
-    <string name="entity.goldChest.messages.magickUp">Макс кол-во волшебств +1</string>
     <string name="army.names.peasant">Крестьяне</string>
     <string name="army.names.aborigine">Туземцы</string>
     <string name="army.names.boar">Кабаны</string>
@@ -69,15 +67,15 @@
     <string name="army.names.gorilla">Гориллы</string>
     <string name="army.names.zombie">Зомби</string>
     <string name="army.names.rknight">Витязи</string>
-    <string name="army.ui.thereIs">Имеется</string>
-    <string name="army.ui.price">Стоимость</string>
-    <string name="army.ui.step">Движение</string>
-    <string name="army.ui.defense">Защита</string>
-    <string name="army.ui.damage">Удар</string>
-    <string name="army.ui.shoot">Стреляет?</string>
-    <string name="army.ui.fly">Летает?</string>
-    <string name="army.ui.afford">Вы можете нанять</string>
-    <string name="army.ui.howMany">Сколько?</string>
+    <string name="entity.armyShop.ui.thereIs">Имеется</string>
+    <string name="entity.armyShop.ui.price">Стоимость</string>
+    <string name="entity.armyShop.ui.step">Движение</string>
+    <string name="entity.armyShop.ui.defense">Защита</string>
+    <string name="entity.armyShop.ui.damage">Удар</string>
+    <string name="entity.armyShop.ui.shoot">Стреляет?</string>
+    <string name="entity.armyShop.ui.fly">Летает?</string>
+    <string name="entity.armyShop.ui.afford">Вы можете нанять</string>
+    <string name="entity.armyShop.ui.howMany">Сколько?</string>
     <string name="player.attrs.money">Золото</string>
     <string name="player.attrs.authority">Авторитет</string>
     <string name="player.attrs.salary">Недельная прибавка</string>
@@ -93,7 +91,7 @@
     <string name="mainMenu.resume">Продолжить</string>
     <string name="mainMenu.training">Тренировка</string>
     <string name="mainMenu.save_game">Сохранить игру</string>
-    <string name="mainMenu.save_game.saved">Cохранено</string>
+    <string name="mainMenu.save_game.saved">Сохранено</string>
     <string name="workers.item1">Плотники</string>
     <string name="workers.item2">Лесорубы</string>
     <string name="workers.item3">Землекопы</string>
@@ -105,6 +103,13 @@
     <string name="magic.hiking_magic5">Дать армию</string>
     <string name="magic.hiking_magic6">Квариавторитет</string>
     <string name="magic.hiking_magic7">Дать волшебство</string>
+    <string name="magic.battle_magic1">Телепорт</string>
+    <string name="magic.battle_magic2">Размножение</string>
+    <string name="magic.battle_magic3">Шаровая молния</string>
+    <string name="magic.battle_magic4">Мороз</string>
+    <string name="magic.battle_magic5">Дубинка</string>
+    <string name="magic.battle_magic6">Воскрешение</string>
+    <string name="magic.battle_magic7">Инфекция</string>
     <string name="battle.begin.castle">Замок</string>
     <string name="battle.begin.noArmy">Без войска драться? Насмешил!</string>
     <string name="battle.begin.ask">Будешь драться?</string>
@@ -112,22 +117,22 @@
     <string name="battle.begin.ask.no">Нет</string>
     <string name="battle.finish.win">Вы победили, вам досталось золота #{?} и ваш авторитет возрос на #{?}</string>
     <string name="battle.finish.fail">Вы проиграли, ваш авторитет уменьшился на #{?} и противник забросил вас неизвестно куда</string>
-    <string name="messages.weekEnd.title">ФИНАНСОВЫЙ ОТЧЁТ ПРОШЛОЙ НЕДЕЛИ</string>
-    <string name="messages.weekEnd.money">Имеется всего</string>
-    <string name="messages.weekEnd.salary">Недельная прибавка</string>
-    <string name="messages.weekEnd.armySalary">Расходы на армию</string>
-    <string name="messages.weekEnd.armyRefresh">#{?} активизируются.</string>
-    <string name="messages.weekEnd.armyRefresh2">Наступает благоприятный период по расположению звёзд для этих войнов.</string>
-    <string name="messages.weekEnd.armyRefresh3">Все их жилища перенаселяются.</string>
-    <string name="messages.weekEnd.cityRefresh">Город #{?} заполнился работниками.</string>
-    <string name="city.names.name1">БАВАРИЯ</string>
-    <string name="city.names.name2">БОРМАШОВ</string>
-    <string name="city.names.name3">ГНИЛОВКА</string>
-    <string name="city.names.name4">ГУРЬЕВ</string>
-    <string name="city.names.name5">ЕЛОВОЕ</string>
-    <string name="castle.names.name1">AKКРА</string>
-    <string name="castle.names.name2">БАМАКО</string>
-    <string name="castle.names.name3">БИСАУ</string>
-    <string name="castle.names.name4">ГЛАЗГО</string>
-    <string name="castle.names.name5">ГРИНВИЧ</string>
+    <string name="weekEnd.messages.title">ФИНАНСОВЫЙ ОТЧЁТ ПРОШЛОЙ НЕДЕЛИ</string>
+    <string name="weekEnd.messages.money">Имеется всего</string>
+    <string name="weekEnd.messages.salary">Недельная прибавка</string>
+    <string name="weekEnd.messages.armySalary">Расходы на армию</string>
+    <string name="weekEnd.messages.armyRefresh">#{?} активизируются.</string>
+    <string name="weekEnd.messages.armyRefresh2">Наступает благоприятный период по расположению звёзд для этих войнов.</string>
+    <string name="weekEnd.messages.armyRefresh3">Все их жилища перенаселяются.</string>
+    <string name="weekEnd.messages.cityRefresh">Город #{?} заполнился работниками.</string>
+    <string name="entity.city.names.name1">БАВАРИЯ</string>
+    <string name="entity.city.names.name2">БОРМАШОВ</string>
+    <string name="entity.city.names.name3">ГНИЛОВКА</string>
+    <string name="entity.city.names.name4">ГУРЬЕВ</string>
+    <string name="entity.city.names.name5">ЕЛОВОЕ</string>
+    <string name="entity.castle.names.name1">AKКРА</string>
+    <string name="entity.castle.names.name2">БАМАКО</string>
+    <string name="entity.castle.names.name3">БИСАУ</string>
+    <string name="entity.castle.names.name4">ГЛАЗГО</string>
+    <string name="entity.castle.names.name5">ГРИНВИЧ</string>
 </resources>
