--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,7 +131,7 @@
     <string name="entity.city.names.name3">ГНИЛОВКА</string>
     <string name="entity.city.names.name4">ГУРЬЕВ</string>
     <string name="entity.city.names.name5">ЕЛОВОЕ</string>
-    <string name="entity.castle.names.name1">AKКРА</string>
+    <string name="entity.castle.names.name1">АККРА</string>
     <string name="entity.castle.names.name2">БАМАКО</string>
     <string name="entity.castle.names.name3">БИСАУ</string>
     <string name="entity.castle.names.name4">ГЛАЗГО</string>
