HarmfulMap and GoodMap rename to one Spell

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -22,19 +22,21 @@
     <string name="entity.city.menu.workers.item2">Лесорубы</string>
     <string name="entity.city.menu.workers.item3">Землекопы</string>
     <string name="entity.city.menu.workers.item4">Камнетёсы</string>
-    <string name="entity.harmfulMap.message1">Вы теряете работников</string>
-    <string name="entity.harmfulMap.message2">Ваш корабль пошёл ко дну</string>
-    <string name="entity.harmfulMap.message3">Ваша памяти стала вам изменять</string>
-    <string name="entity.harmfulMap.message4">Вы теряете армию</string>
-    <string name="entity.harmfulMap.message5">Ваш золотой запас уже не с вами</string>
-    <string name="entity.harmfulMap.message6">*У хозяина земли выросли болишие уши</string>
-    <string name="entity.harmfulMap.message7">*Заклинание перенесло вас в другое место</string>
-    <string name="entity.goodMap.message1">Ваш авторитет в войсках растёт</string>
-    <string name="entity.goodMap.message2">Найденная бумага очень нужна одному из Хозяев земель</string>
-    <string name="entity.goodMap.message3">*Вы нашли карту для вызова волшебника</string>
-    <string name="entity.goodMap.message4">*Контрактные замки данной земли расположены</string>
-    <string name="entity.goodMap.message5">*Ваш золотой запас растёт</string>
-    <string name="entity.goodMap.message6">*Ваши войно становятся более умелыми</string>
+    <string name="entity.spell.message0">Символы заклинания стерты временем на этой бумаге</string>
+    <string name="entity.spell.message1">Вы теряете всех работников</string>
+    <string name="entity.spell.message2">Ваш корабль пошёл ко дну</string>
+    <string name="entity.spell.message3">Память стала Вам изменять</string>
+    <string name="entity.spell.message4">Вы теряете армию</string>
+    <string name="entity.spell.message5">Ваш золотой запас уже не с вами</string>
+    <string name="entity.spell.message6">У Хозяина земли выросли БОЛЬШИЕ УШИ</string>
+    <string name="entity.spell.message7">Ваше войско уменьшилось</string>
+    <string name="entity.spell.message8">Заклинание переносит Вас в другое место</string>
+    <string name="entity.spell.message9">Ваш авторитет в войсках растёт</string>
+    <string name="entity.spell.message10">Ваш Золотой Запас увеличивается в два раза</string>
+    <string name="entity.spell.message11">Ваши воины становятся более умелыми</string>
+    <string name="entity.spell.message12">Вы нашли заклинание для вызова Волшебника</string>
+    <string name="entity.spell.message13">Найденная бумага очень нужна одному из Хозяев земель</string>
+    <string name="entity.spell.message14">Города наполняются работниками</string>
     <string name="entity.guidePost.message1">Найди ритуальный камень.</string>
     <string name="entity.guidePost.message2">Ку-ку.</string>
     <string name="entity.guidePost.message3">Присядь, Рыцарь, Отдохни.</string>
