Added all cities, castles, armies names

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -71,6 +71,21 @@
     <string name="army.names.gorilla">Гориллы</string>
     <string name="army.names.zombie">Зомби</string>
     <string name="army.names.rknight">Витязи</string>
+    <string name="army.names.druid">Друиды</string>
+    <string name="army.names.cannibal">Каннибалы</string>
+    <string name="army.names.ghost">Призраки</string>
+    <string name="army.names.lion">Львы</string>
+    <string name="army.names.snake">Змеи</string>
+    <string name="army.names.troll">Троли</string>
+    <string name="army.names.vampire">Вампиры</string>
+    <string name="army.names.giant">Гиганты</string>
+    <string name="army.names.elephant">Слоны</string>
+    <string name="army.names.knight">Рыцари</string>
+    <string name="army.names.centaur">Кентавры</string>
+    <string name="army.names.dinosaur">Динозавры</string>
+    <string name="army.names.daemon">Демоны</string>
+    <string name="army.names.cyclops">Драконы</string>
+    <string name="army.names.dragon">Циклопы</string>
     <string name="entity.armyShop.ui.thereIs">Имеется</string>
     <string name="entity.armyShop.ui.price">Стоимость</string>
     <string name="entity.armyShop.ui.step">Движение</string>
@@ -134,11 +149,57 @@
     <string name="entity.city.names.name3">ГНИЛОВКА</string>
     <string name="entity.city.names.name4">ГУРЬЕВ</string>
     <string name="entity.city.names.name5">ЕЛОВОЕ</string>
+    <string name="entity.city.names.name6">ЖЛОБСК</string>
+    <string name="entity.city.names.name7">ЗИГЗЮГСК</string>
+    <string name="entity.city.names.name8">ИВАНОВКА</string>
+    <string name="entity.city.names.name9">КОРОБОВ</string>
+    <string name="entity.city.names.name10">ЛЕВАДА</string>
+    <string name="entity.city.names.name11">ЛЫСЕВСК</string>
+    <string name="entity.city.names.name12">МОСКАЛЕВ</string>
+    <string name="entity.city.names.name13">ОКРАИНКА</string>
+    <string name="entity.city.names.name14">ОСНОВА</string>
+    <string name="entity.city.names.name15">ПИХАТКИ</string>
+    <string name="entity.city.names.name16">РОГАНЬ</string>
+    <string name="entity.city.names.name17">САЛАТОВ</string>
+    <string name="entity.city.names.name18">СЕНТР</string>
+    <string name="entity.city.names.name19">СОХАТЫЙ</string>
+    <string name="entity.city.names.name20">ТЮРИНКА</string>
+    <string name="entity.city.names.name21">УЖАЛОВСК</string>
+    <string name="entity.city.names.name22">УРЮЙСК</string>
+    <string name="entity.city.names.name23">ХАРЬКОВ</string>
+    <string name="entity.city.names.name24">ШИШКИНО</string>
+    <string name="entity.city.names.name25">ЩУЧЬЕ</string>
+    <string name="entity.city.names.name26">ЭННСК</string>
+    <string name="entity.city.names.name27">ЮЖНЫЙ</string>
+    <string name="entity.city.names.name28">ЯНТАРНЫЙ</string>
     <string name="entity.castle.names.name1">AKКРА</string>
     <string name="entity.castle.names.name2">БАМАКО</string>
     <string name="entity.castle.names.name3">БИСАУ</string>
     <string name="entity.castle.names.name4">ГЛАЗГО</string>
     <string name="entity.castle.names.name5">ГРИНВИЧ</string>
+    <string name="entity.castle.names.name6">ГРИНВИЧ</string>
+    <string name="entity.castle.names.name7">ДОВЕР</string>
+    <string name="entity.castle.names.name8">ИФ</string>
+    <string name="entity.castle.names.name9">КАЗБЕК</string>
+    <string name="entity.castle.names.name10">КАНБЕРРА</string>
+    <string name="entity.castle.names.name11">КОНАКРИ</string>
+    <string name="entity.castle.names.name12">ЛА-ПАС</string>
+    <string name="entity.castle.names.name13">ЛОРШЕ</string>
+    <string name="entity.castle.names.name14">МАРШЕЛЬ</string>
+    <string name="entity.castle.names.name15">МОНБЛАН</string>
+    <string name="entity.castle.names.name16">НДЖАМЕНА</string>
+    <string name="entity.castle.names.name17">ПОРТАЛИС</string>
+    <string name="entity.castle.names.name18">РАБАТ</string>
+    <string name="entity.castle.names.name19">РАНГУН</string>
+    <string name="entity.castle.names.name20">СУКРЕ</string>
+    <string name="entity.castle.names.name21">СФИНКС</string>
+    <string name="entity.castle.names.name22">ТЕНЕГАР</string>
+    <string name="entity.castle.names.name23">ТОЛЕДО</string>
+    <string name="entity.castle.names.name24">ТРИЕСТ</string>
+    <string name="entity.castle.names.name25">ХАРАФАТ</string>
+    <string name="entity.castle.names.name26">ХАРТУМ</string>
+    <string name="entity.castle.names.name27">ЭР-РИЯД</string>
+    <string name="entity.castle.names.name28">ЯСЕР</string>
     <string name="entity.sorcerer.message1">Уменьшил отведенное Вам время</string>
     <string name="entity.sorcerer.message2">Уменьшил Вашу волшебную силу</string>
     <string name="entity.sorcerer.message3">Уменьшил Ваш авторитет</string>
