--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -213,4 +213,6 @@
     <string name="entity.sorcerer.message10">Перенес Вас в другое место</string>
     <string name="entity.sorcerer.message11">Потопил Ваш корабль</string>
     <string name="entity.sorcerer.message12">Заставил Вас всё забыть</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
