--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -219,4 +219,9 @@
     <string name="entity.goldChest.foundIt" tools:ignore="UnusedResources">Вы нашли сундук полный золота</string>
     <string name="entity.goldChest.variant1" tools:ignore="UnusedResources">Золото</string>
     <string name="entity.goldChest.variant2" tools:ignore="UnusedResources">Авторитет</string>
+    <string name="battle.begin.ask.level1">Я раздавлю тебя как букашку</string>
+    <string name="battle.begin.ask.level2">Видал я и посильнее</string>
+    <string name="battle.begin.ask.level3">Ты достойный противник</string>
+    <string name="battle.begin.ask.level4">Победить тебя будет не просто</string>
+    <string name="battle.begin.ask.level5">Можно я сдамся?</string>
 </resources>
