--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,6 +4,7 @@
     <string name="entity.goldChest.menu.item2" tools:ignore="UnusedResources">Раздать воинам(авторитет +#{?})</string>
     <string name="entity.goldChest.messages.salary" tools:ignore="UnusedResources">Недельная плата+</string>
     <string name="entity.goldChest.messages.magicUp" tools:ignore="UnusedResources">Макс кол-во волшебств +1</string>
+    <string name="entity.goldChest.messages.randomMagic" tools:ignore="UnusedResources">Случайное заклинание +1</string>
     <string name="countries.country1" tools:ignore="UnusedResources">Равнолесье</string>
     <string name="countries.country2" tools:ignore="UnusedResources">Заболотие</string>
     <string name="countries.country3" tools:ignore="UnusedResources">Тайгания</string>
@@ -143,6 +144,7 @@
     <string name="weekEnd.messages.armyRefresh2" tools:ignore="UnusedResources">Наступает благоприятный период по расположению звёзд для этих воинов.</string>
     <string name="weekEnd.messages.armyRefresh3" tools:ignore="UnusedResources">Все их жилища перенаселяются.</string>
     <string name="weekEnd.messages.cityRefresh" tools:ignore="UnusedResources">Город #{?} заполнился работниками.</string>
+    <string name="entity.city.names.name0" tools:ignore="UnusedResources">АКСАКАЛОВКА</string>
     <string name="entity.city.names.name1" tools:ignore="UnusedResources">БАВАРИЯ</string>
     <string name="entity.city.names.name2" tools:ignore="UnusedResources">БОРМАШОВ</string>
     <string name="entity.city.names.name3" tools:ignore="UnusedResources">ГНИЛОВКА</string>
