--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -176,6 +176,7 @@
     <string name="entity.city.names.name26" tools:ignore="UnusedResources">ЭННСК</string>
     <string name="entity.city.names.name27" tools:ignore="UnusedResources">ЮЖНЫЙ</string>
     <string name="entity.city.names.name28" tools:ignore="UnusedResources">ЯНТАРНЫЙ</string>
+    <string name="entity.castle.names.name0" tools:ignore="UnusedResources">АВАЛОН</string>
     <string name="entity.castle.names.name1" tools:ignore="UnusedResources">AKКРА</string>
     <string name="entity.castle.names.name2" tools:ignore="UnusedResources">БАМАКО</string>
     <string name="entity.castle.names.name3" tools:ignore="UnusedResources">БИСАУ</string>
